SERVER-74260 Fix DDLLockManager error message returned when hitting lock timeout